1999-08-23  Roland McGrath  <roland@baalperazim.frob.com>

	* wire.c (map_extent): Use p_memsz instead of p_filesz.
	(loaded): Return zero if _DYNAMIC has address zero (i.e., static link).

1999-08-19  Roland McGrath  <roland@baalperazim.frob.com>

	* mktime.c: File removed.  Current libc code is good.
	* Makefile (SRCS): Remove mktime.c.

1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* portinfo.h: Don't include <sys/types.h>, <sys/mman.h>.
	This is an exported header, and its decls don't need them.
	* portinfo.c: Include them here instead.
	* xportinfo.c: And here.

1999-07-11  Thomas Bushnell, BSG  <tb@mit.edu>

	* ugids-argp.c (parse_opt): Clarify if-then-else structure by
	adding more braces.

	* portinfo.h: Include <sys/types.h>.
	* portxlate.c: Likewise.
	* portinfo.c: (print_port_info): Cast first arg of munmap correctly.
	(print_task_ports_info): Likewise.
	* xportinfo.c (print_xlated_task_ports_info): Likewise.
	* idvec-auth.c (idvec_merge_auth): Likewise.
	* portxlate.c (port_name_xlator_create): Likewise.
	(port_name_xlator_free): Likewise.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* portinfo.h: Add #include <sys/mman.h> for munmap decl.
	* fsysops.c: Likewise.
	* idvec-auth.c: Likewise.
	* portxlate.c: Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* fsysops.c (fsys_get_readonly): Use munmap instead of vm_deallocate.
	* idvec-auth.c (idvec_merge_auth): Likewise.
	* portinfo.c (print_port_info): Likewise.
	(print_task_ports_info): Likewise.
	* portxlate.c (port_name_xlator_create): Likewise.
	(port_name_xlator_free): Likewise.
	* xportinfo.c (print_xlated_task_ports_info): Likewise.

1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>

	* idvec-verify.c (SHADOW_PASSWORD_STRING): New macro.
	(verify_id): Check for shadow password immediately after getpwuid_r
	call, and replace PW->pw_passwd pointer with SP->sp_pwdp.
	This is ok since the only use will be later in the function,